<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="320dp"
            android:layout_height="250dp"
            android:background="@drawable/background_dialog"
            android:gravity="center"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/avenir_bold"
                android:text="@string/dialog_title_removal_confirmation"
                android:textColor="@color/colorTextGray"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintBottom_toTopOf="@+id/textViewPrivacyPolicy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewPrivacyPolicy"
                android:layout_width="0dp"
                android:layout_height="74dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/avenir_regular"
                android:gravity="center"
                android:text="@string/dialog_description_removal"
                android:textColor="@color/colorDialogTitle"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toTopOf="@+id/cancelButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAccept"
                android:layout_width="124dp"
                android:layout_height="33dp"
                android:background="@drawable/read_btn_main"
                android:fontFamily="@font/avenir_bold"
                android:gravity="center"
                android:text="@string/btn_ok"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancelButton"
                app:layout_constraintTop_toTopOf="@+id/cancelButton" />

            <TextView
                android:id="@+id/cancelButton"
                android:layout_width="124dp"
                android:layout_height="33dp"
                android:fontFamily="@font/avenir_bold"
                android:gravity="center"
                android:text="@string/btn_cancel"
                android:textAllCaps="false"
                android:textColor="#959595"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonAccept"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPrivacyPolicy" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>





</layout>