<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="345dp"
            android:layout_height="195dp"
            android:background="@drawable/background_dialog"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lockedAppsText"
                android:layout_width="307dp"
                android:layout_height="71dp"
                android:layout_margin="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/popup_gallery_upload"
                android:textColor="@color/gnt_black"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.129" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox"
                android:text="@string/dont_show_it_next_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/okButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.063"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lockedAppsText"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/okButton"
                android:layout_width="124dp"
                android:layout_height="33dp"
                android:background="@drawable/read_btn_main"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/btn_ok"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lockedAppsText"
                app:layout_constraintVertical_bias="0.737" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>





</layout>